--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "server",
+  "name": "translater_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.1",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.42.0",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
-    "react-speech-kit": "^3.0.1",
-    "react-speech-recognition": "^3.10.0"
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
